--- a/api/package.json
+++ b/api/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./index.js",
-    "test": "mocha -w ./tests/**/*.spec.js"
+    "test": "mocha -w ./tests/**/*.spec.js",
+    "start": "nodemon index.js"
   },
   "author": "Henry",
   "license": "ISC",
@@ -27,7 +27,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^8.2.1",
-    "nodemon": "^2.0.20",
+    "nodemon": "^2.0.21",
     "supertest": "^6.0.1",
     "supertest-session": "^4.1.0"
   }
