--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha -w ./tests/**/*.spec.js",
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "author": "Henry",
   "license": "ISC",
