--- a/api/package.json
+++ b/api/package.json
@@ -23,7 +23,8 @@
     "morgan": "^1.10.0",
     "pg": "^8.17.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "@supabase/supabase-js": "^2.90.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
